DataView: fix scrollbar shift on filter

--- a/timApp/static/scripts/tim/plugin/dataview/data-view.component.scss
+++ b/timApp/static/scripts/tim/plugin/dataview/data-view.component.scss
@@ -96,7 +96,7 @@ table.virtual {
   }
 
   span.sort-marker {
-    min-width: 100px;
+    min-width: 0px;
     display: inline-block;
   }
 
